Fix:  Landing Page Overflow, Update Topbar Button UI, and Improve Popper Usability
- Resolved an overflow issue on the landing page that resulted in the cutting off of profile icons on slide 3, ensuring all elements are fully visible.
- Refined the hover effect for topbar-btn on the landing page for dark mode with an updated underline style, enhancing visual feedback and consistency.
- Enhanced the usability of the ButtonAddCollaborator by allowing users to close the associated Popper by clicking outside the button, improving the user interaction experience.

--- a/client/public/views/styles/homepage.css
+++ b/client/public/views/styles/homepage.css
@@ -64,7 +64,7 @@ img.arrow.dark {
 .container {
   width: 90vw;
   margin-right: 5%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .containerLeft,
@@ -301,7 +301,7 @@ img.arrow.dark {
 
 .profiles-container {
   display: grid;
-  animation: slideUp 2.5s ease-out forwards 1.5s;
+  /* animation: slideUp 2.5s ease-out forwards 1.5s; */
 }
 
 .slide {
@@ -676,4 +676,9 @@ img.arrow.dark {
 
 .link.dark {
   color: white;
+}
+
+
+.topbar-btn.dark::after, .topbar-btn:hover.dark::after {
+  background: white;
 }
